# rust-mono

./: .gitignore
advent/: Cargo.toml
advent/res/2023/: task01a.txt
advent/src/: empty_task.rs  int_code.rs  main.rs  task.rs  task01.rs  task01a.rs  task02.rs  task03.rs  task04.rs  task05.rs  task06.rs  task07.rs  util.rs
advent/src/a_of_c_2019/: int_code.rs  mod.rs  task01.rs  task02.rs  task03.rs  task05.rs  task06.rs  task07.rs
advent/src/a_of_c_2020/: mod.rs  task01.rs  task02.rs  task03.rs  task04.rs  task05.rs  task06.rs  task07.rs  task08.rs
advent/src/a_of_c_2023/: mod.rs  task01.rs  task02.rs  task03.rs  task04.rs  task05.rs  task06.rs  task07.rs  task08.rs  task09.rs  task11.rs
bevy-experiments/: Cargo.toml
bevy-experiments/src/: main.rs
canvas/: Cargo.toml
canvas-test/: Cargo.toml
canvas-test/src/: main.rs
canvas/src/: lib.rs  vector.rs
cdl-compiler/: cargo.toml  compile.output.txt  out.txt
cdl-compiler/cdl-cli/: Cargo.toml
cdl-compiler/cdl-cli/src/: main.rs
cdl-compiler/cdl-lexer/: Cargo.toml
cdl-compiler/cdl-lexer/benches/: benchmarks.rs
cdl-compiler/cdl-lexer/src/: lib.rs  token_stream.rs
cdl-compiler/cdl-lexer/test_script/: test.cdl
cdl-compiler/cdl-parser/: Cargo.toml
cdl-compiler/cdl-parser/benches/: benchmarks.rs
cdl-compiler/cdl-parser/src/: lib.rs  parse_expr.rs  parser.rs  token_stream.rs  types.rs
cdl-compiler/cdl-parser/src/ast_nodes/: ast_boolean.rs  ast_color.rs  ast_entity.rs  ast_formula.rs  ast_function.rs  ast_identifier.rs  ast_number.rs  ast_operator.rs  ast_property.rs  ast_reference.rs  ast_script.rs  ast_string.rs  ast_table_alias.rs  ast_title.rs  ast_vpath.rs  mod.rs
cdl-compiler/crates/ast/: Cargo.toml
cdl-compiler/crates/cli/: Cargo.toml
cdl-compiler/crates/lexer/: Cargo.toml
cdl-compiler/crates/node-processing/: Cargo.toml
cdl-compiler/crates/node-processing/src/: lib.rs  processing_context.rs
cdl-compiler/crates/parser/: Cargo.toml
cdl-compiler/crates/parser/benches/: benchmarks.rs
cdl-compiler/crates/parser/src/: lib.rs  parse_expr.rs  parser.rs  parser_logger.rs  token_stream.rs  types.rs
cdl-compiler/crates/parser/src/ast_nodes/: ast_boolean.rs  ast_color.rs  ast_entity.rs  ast_formula.rs  ast_function.rs  ast_identifier.rs  ast_number.rs  ast_operator.rs  ast_property.rs  ast_reference.rs  ast_script.rs  ast_string.rs  ast_table_alias.rs  ast_title.rs  ast_vpath.rs  mod.rs
cdl-compiler/test_script/: canvas_example.cdl  large.cdl  test.cdl  workforce.cdl
cdl-service/: Cargo.toml  empower.cdl
cdl-service/cdl-bench/: Cargo.toml
cdl-service/cdl-bench/src/: lib.rs
cdl-service/cdl-core/: Cargo.toml
cdl-service/cdl-core/src/: lexer.rs  lib.rs  parser.rs  print.rs
cdl-service/cdl-wasm/: Cargo.toml  build-wasm.cmd
cdl-service/cdl-wasm/src/: lib.rs
cdl-service/cdl-wasm/wasm-frontend/: .prettierrc.js  App.js  empower.cdl  index.html  index.js  main.css  package-lock.json  package.json  (+1 more)
cdl-service/service/: Cargo.toml
cdl-service/service/src/: main.rs
cdl-service/service/test-requests/: cdl-service.postman_collection.json
cdl-service/src/: main.rs
colony-game/: cargo.toml
colony-game/game/: Cargo.toml
colony-game/src/: main.rs
dice-game/src/: main.rs  round.rs  throw.rs
egui-testing/: Cargo.toml
egui-testing/src/: app.rs  common.rs  djikstra.rs  generators.rs  hex_grid.rs  main.rs  options_window.rs  slider_with_text.rs  square_grid.rs
factorio-idle/: Cargo.toml  package-lock.json  package.json  vite.config.ts
factorio-idle-old/: package-lock.json  package.json
factorio-idle-old/game-core/: Cargo.toml
factorio-idle-old/src/: App.tsx  main.tsx
factorio-idle/game-core/: Cargo.toml
factorio-idle/src/: App.tsx  GameState.tsx  factorio.rs  index.ts  main.rs  main.tsx  people.rs
fagkveld/: Cargo.toml
fagkveld/src/: main.rs
gfx-hal-tutorials/: Cargo.toml
gfx-hal-tutorials/src/: main.rs
gfx-hal-tutorials/src/shaders/: part-1.frag  part-1.vert  part-2.frag  part-2.vert
graph-testing/: Cargo.toml
graph-testing/.zed/: tasks.json
graph-testing/src/: context.rs  entity.rs  main.rs  miner.rs  test.html
land-test/: Cargo.toml
land-test/src/: app.rs  constants.rs  lib.rs  main.rs
maze/: Cargo.toml
maze-egui/: Cargo.toml
maze-egui/src/: gui.rs  main.rs
maze-imgui/: Cargo.toml
maze-imgui/src/: gui.rs  main.rs
maze-maker/: Cargo.toml
maze-maker/src/: app.rs  common.rs  djikstra.rs  main.rs  options_window.rs
maze/src/: app_state.rs  canvas.rs  cell.rs  common.rs  djikstra.rs  generators.rs  main.rs  maze.rs
maze/src/generators/: growing_tree.rs
maze/src/grid/: hex_grid.rs  mod.rs  square_grid.rs  types.rs
maze/src/maze/: growing_tree.rs  recursive_backtracker.rs
parser-gen/: Cargo.toml
parser-gen/src/: cdl.rs  common.rs  lexer.rs  main.rs  xmlparser.rs
raytracer/: Cargo.toml  scene.json  scene_debug.json
raytracer/src/: camera.rs  canvas.rs  hitable.rs  main.rs  material.rs  ray.rs  scene.rs  vec3.rs
raytracer/src/scene/: world_builder.rs
roguelike/: Cargo.toml
roguelike/src/: main.rs
rust-cdl-compiler/: Cargo.toml
rust-cdl-compiler/cdl-cli/: Cargo.toml
rust-cdl-compiler/cdl-core/: Cargo.toml
rust-cdl-compiler/cdl-scripts/: script1.cdl  simple.cdl
sil/: cargo.toml
sil/sil-lexer/: Cargo.toml
twin-stick/: Cargo.toml
twin-stick/src/: collision_plugin.rs  components.rs  debug_text.rs  enemy_plugin.rs  main.rs  player_plugin.rs
vulkano-test/: Cargo.toml
vulkano-test/src/: main.rs
wasm-compiler/: cargo.toml
wasm-compiler/cli_args/: Cargo.toml
wasm-compiler/csl/: Cargo.toml
wgpu-egui/: Cargo.toml
wgpu-egui/src/: _lib.rs  camera.rs  gpu.rs  gui.rs  gui_example.rs  lib.rs  main.rs  model.rs  renderer.rs  resource.rs  scene.rs  shader.wgsl  state.rs  texture.rs
wgpu-experiments/: Cargo.toml
wgpu-experiments/src/: main.rs  shader.wgsl  texture.rs
wgpu-testing/: Cargo.toml
wgpu-testing/src/: example.rs  framework.rs  grid.rs  main.rs  texture.rs  vertex.rs  wgpu_utils.rs
wgpu-testing/src/offical-example/: framework.rs  main.rs
wgpu-testing/src/shaders/: line.frag  shader.vert
(+80 files in other folders)
