[package]
name = "advent"
version = "0.1.0"
authors = ["Øyvind <oyvind.nordsveen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
num = "0.4.1"
rayon = "1.8.0"
