[package]
name = "bevy-experiments"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.3"
bevy_egui = "0.33.0"
noise = "0.9.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
