[package]
name = "maze-egui"
version = "0.1.0"
authors = ["Øyvind <oyvind.nordsveen@gmail.com>"]
edition = "2018"
resolver="2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.12"
egui_wgpu_backend = "0.8.0"
egui_winit_platform = "0.7"
env_logger = "0.8.3"
log = "0.4.14"
winit = "0.24"
winit_input_helper = "0.9.0"
pixels="0.3"
#wasm-bindgen="0.2.74"