[package]
name = "maze-imgui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
imgui = "0.7"
imgui-wgpu = "0.15.1"
imgui-winit-support = "0.7"
log = "0.4"
pixels = "0.3.0"
winit = "0.24"
winit_input_helper = "0.9"