[package]
name = "maze"
version = "0.1.0"
authors = ["Øyvind Nordsveen <oyvind.nordsveen@confirmit.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb= "0.19.2"
rand = "0.7.0"
image = "0.22.1"
canvas = { path = "../canvas" }