[package]
name = "raytracer"
version = "0.1.0"
authors = ["Øyvind <oyvind.nordsveen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb= "0.12.0"
rand = "0.7.0"
rayon = "1.1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hotwatch = "0.4.2"