[package]
name = "wgpu-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.18", features = ["derive"] }
#egui = "0.28.1"
#egui-wgpu = "0.28.1"
#egui-winit = "0.28.1"
env_logger = "0.11.5"
log = "0.4.22"
pollster = "0.3.0"
wgpu = "22.1.0"
winit = { version = "0.29", features=["rwh_05"] }
