[package]
name = "wgpu-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bytemuck = { version = "1.18", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.5"
image = {version="0.25.2", features = ["png"]} 
log = "0.4.22"
pollster = "0.3.0"
wgpu = "22.1.0"
winit = { version = "0.30.5", features=["rwh_05"] }
tobj = { version = "3.2", default-features = false, features = ["async"]}
egui = "0.29.1"
egui-wgpu = { version = "0.29.1", features = ["winit"] }
nalgebra-glm = { version = "0.19.0", features = [
    "convert-bytemuck",
    "serde-serialize",
] }
egui-winit = "0.29.1"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
