[package]
name = "wgpu-testing"
version = "0.1.0"
authors = ["Øyvind <oyvind.nordsveen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.5.0"
winit = "0.22.1"
futures = "0.3.4"
cgmath = "0.17"
zerocopy = "0.3"
glsl-to-spirv = "0.1"
#env_logger = "0.7"
#log = "0.4"
png = "0.16.2"
failure = "0.1.7"
bytemuck = "1.2.0"