[package]
name = "cdl-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdl-lexer = { path = "../cdl-lexer" }
anyhow = "1.0.75"
serde = { version = "1.0.197" , features =["derive","rc"] }
serde_json = "1.0.114"


[dev-dependencies]
criterion = { version = "0.4" }

[[bench]]
name = "benchmarks"
harness = false
