[package]
name = "service"
version = "0.1.0"
authors = ["Øyvind <oyvind.nordsveen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.3"
actix-cors = "0.1.0"
log = "0.4.6"
env_logger = "*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
cdl-core = { path = "../cdl-core"}