[package]
name = "node-processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
ast = { path = "../ast" }
lexer = { path = "../lexer" }
anyhow = "1.0.75"
tracing = { workspace = true }